Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-15708

PdfSam 3.3.5 setup can not decode bmp

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • Wine

    Description

      PdfSam 3.3.5 offers a msi-setup.

      Expected result
      xpsp3.png

      Observed result
      First dlg of setup lacks to display some bmp on the left side of main view
      0.4.11-RC-33-gb27a643__pdfsam3_3_5_setup.png
      0.4.11-RC-33-gb27a643__pdfsam3_3_5_setup.log

      fixme:(dll/win32/windowscodecs/bmpdecode.c:938) unsupported bitfields type depth=32 red=ff000000 green=ff0000 blue=ff00 alpha=ff
      fixme:(dll/win32/windowscodecs/info.c:2559) cannot convert {6fddc324-4e03-4bfe-b185-3d77768dc900} to {6fddc324-4e03-4bfe-b185-3d77768dc90f}
      err:(dll/win32/oleaut32/olepicture.c:2360) IPersistStream_Load failed
      err:(dll/win32/msi/dialog.c:1364) failed to load picture
      err:(dll/win32/msi/dialog.c:1435) Failed to load bitmap L"WixUI_Bmp_Dialog"
      

      Sidenote: I saw some other msi setups having the same glitch, but most likely its not the msi component, that is broken here, but stuff below it used for this bmp stuff.

      Attachments

        1. xpsp3.png
          305 kB
          reactosfanboy
        2. 0.4.11-RC-33-gb27a643__pdfsam3_3_5_setup.log
          55 kB
          reactosfanboy
        3. 0.4.11-RC-33-gb27a643__pdfsam3_3_5_setup.png
          52 kB
          reactosfanboy
        4. Screenshot_Wine.png
          25 kB
          DarkShadow44
        5. image-2022-01-03-01-08-01-505.png
          95 kB
          thc
        6. 0.4.15-dev-3628-ga6bf77e_worksLikeACharm.png
          64 kB
          reactosfanboy

        Issue Links

          Activity

            People

              thc thc
              reactosfanboy reactosfanboy
              Votes:
              3 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: